Resume - Updated scroll

--- a/index.html
+++ b/index.html
@@ -70,11 +70,13 @@
 
 	<!--Objectives-->
 
+	<hr class="hr2" id="objectives">
+
 	<div class="resume-body">
 		
 		<div class="container">
 			<div class="objectives">
-				<h2 id="objectives">Objectives</h2>
+				<h2>Objectives</h2>
 
 				<div class="break2"></div>
 
@@ -87,7 +89,7 @@
 
 				<div class="break2"></div>
 
-				<hr class="hr2">
+				<hr class="hr2" id="education">
 
 			</div>
 		</div>
@@ -98,7 +100,7 @@
 
 		<div class="education">
 			<div class="container">
-				<h2 id="education">Education</h2>
+				<h2>Education</h2>
 
 				<div class="break3"></div>
 
@@ -119,18 +121,17 @@
 					</p>
 				
 					<div class="break3"></div>
-
-				<hr class="hr2">
-			
 			</div>
 		</div>
 			
 		
 <!-- Work Experience -->
 
+		<hr class="hr2" id="work-experience">
+
 		<div class="work-experience">
 			<div class="container">
-				<h2 id="work-experience">Work Experience</h2>
+				<h2>Work Experience</h2>
 
 				<div class="break3"></div>
 				
